# seigov

./: .gitignore  .zenodo.json  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md  referencia.md  solicitando-acesso.md  uso.md
referencia/: index.html
search/: search_index.json
solicitando-acesso/: index.html
src/seigov/: __init__.py  client.py  config.py  exceptions.py  parse.py  sip.py  wsdl.py
src/seigov/wsdl/: sei.wsdl  sip.wsdl
tests/: test_client.py  test_config.py  test_parse.py
uso/: index.html
